test/e2e/metaprotocol-gateway/testdata/ingress-patch.yaml
spec:
  template:
    spec:
      containers:
      - name: istio-proxy
        image: aeraki/meta-protocol-proxy-debug:1.2.3
        env:
        - name: ISTIO_BOOTSTRAP_OVERRIDE
          value: /etc/istio/custom-bootstrap/custom_bootstrap.json
        volumeMounts:
        - mountPath: /etc/istio/custom-bootstrap
          name: custom-bootstrap-volume
        - mountPath: /var/run/secrets/workload-spiffe-uds
          name: workload-socket
        - mountPath: /var/run/secrets/workload-spiffe-credentials
          name: workload-certs
      volumes:
      - configMap:
          defaultMode: 420
          name: aeraki-bootstrap-config
        name: custom-bootstrap-volume
      - emptyDir:
        name: workload-socket
      - emptyDir:
        name: workload-certs
